--- a/FA.JustBlog/appsettings.json
+++ b/FA.JustBlog/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-     "DefaultConnection": "Data Source=trantheanh.duckdns.org,1433; Initial Catalog=FA.JustBlog;User ID=sa;Password=Anh@11123; TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=trantheanh.duckdns.org,1433; Initial Catalog=FA.JustBlog;User ID=sa;Password=Anh@11123; TrustServerCertificate=true; MultipleActiveResultSets=True"
+    
     //"DefaultConnection": "Data Source=localhost;Initial Catalog=FA.JustBlog;TrustServerCertificate=true; "
   },
   "Logging": {
